--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,8 +2,11 @@
 # tasks file for ansible/jino
 - name: 'install nginx packages'
   package:
-    name: nginx
+    name: "{{item}}"
     state: present
+  loop:
+    - nginx
+    - procps
 - name: 'start nginx service'
   service:
     name: nginx
